welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: not found: value nbCases
nbCases = 0
^Program:5: error: not found: value nbCases
  nbCases = nbCases + 1
  ^Program:8: error: not found: value nbCases
    for (i <- 1 to nbCases){
                   ^